fix startmenu issue on firefox

--- a/tw.css
+++ b/tw.css
@@ -180,12 +180,12 @@ taskbar {
     min-height: 0px;
     opacity: 0;
     position: absolute;
-    bottom: 0px;
+    bottom: -9999px;
     left: 0;
     max-height: 0px;
   }
-  0.999% {
-    display: block;
+  0.01% {
+    display: flex;
     min-height: 0svh;
     opacity: 0;
     position: absolute;
@@ -194,6 +194,7 @@ taskbar {
     max-height: fit-content;
   }
   1% {
+    display: flex;
     min-height: 14svh;
     opacity: 0;
     position: absolute;
@@ -202,6 +203,7 @@ taskbar {
     max-height: fit-content;
   }
   to {
+    display: flex;
     min-height: 50svh;
     opacity: 1;
     position: absolute;
@@ -216,14 +218,14 @@ taskbar {
     opacity: 1;
     position: absolute;
     bottom: 40px;
-    left: 0;
+    left: 0;display:flex;
   }
   66% {
     min-height: 9svh;
     opacity: 0;
     position: absolute;
     bottom: 18px;
-    left: 0;
+    left: 0;display:flex;
   }
   99% {
     min-height: 9svh;
@@ -231,13 +233,13 @@ taskbar {
     position: absolute;
     bottom: 18px;
     left: 0;
-    display:block;
+    display:flex;
   }
   to {
     min-height: 0px;
     opacity: 0;
     position: absolute;
-    bottom: 0px;
+    bottom: -9999px;
     left: 0;
     max-height: 0px;
     display: none;
